[gd_scene load_steps=4 format=3 uid="uid://puzzle_scene"]

[ext_resource type="Script" path="res://presentation/puzzle_controller.gd" id="1"]
[ext_resource type="Script" path="res://presentation/board_view.gd" id="2"]
[ext_resource type="Script" path="res://presentation/animated_background.gd" id="3"]

[node name="PuzzleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("3")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="MenuButton" type="Button" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "✕ Quit"
flat = true

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Puzzle"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Spacer2" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ObjectiveBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 34.0
offset_right = -8.0
offset_bottom = 52.0
grow_horizontal = 2

[node name="ObjectiveLabel" type="Label" parent="ObjectiveBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Capture the enemy Chief in 1 move"
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)

[node name="MoveCounter" type="Label" parent="ObjectiveBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Move 0 / 1"
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(1, 1, 1, 0.6)

[node name="StatusBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 54.0
offset_right = -8.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="StatusLabel" type="Label" parent="StatusBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Your move"
horizontal_alignment = 1

[node name="BoardView" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -52.0
mouse_filter = 0
script = ExtResource("2")

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -48.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8

[node name="RetryButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="UndoButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Undo"

[node name="SkipButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Skip ▸"

[node name="HintLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -68.0
offset_right = -12.0
offset_bottom = -52.0
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 0.7)
